# mapster-backend

./: .gitignore  Cargo.toml  README.md
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/: config.rs  lib.rs
crates/libs/lib-auth/src/pwd/: error.rs  mod.rs
crates/libs/lib-auth/src/pwd/scheme/: error.rs  mod.rs  scheme_02.rs
crates/libs/lib-auth/src/token/: error.rs  mod.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: config.rs  lib.rs
crates/libs/lib-core/src/_dev_utils/: dev_db.rs  mod.rs
crates/libs/lib-core/src/ctx/: mod.rs
crates/libs/lib-core/src/model/: error.rs  mod.rs  modql_utils.rs  post.rs  post_media.rs  user.rs
crates/libs/lib-core/src/model/base/: crud_fns.rs  macros.rs  mod.rs  utils.rs
crates/libs/lib-core/src/model/store/: mod.rs
crates/libs/lib-core/src/model/store/dbx/: error.rs  mod.rs
crates/libs/lib-storage/: Cargo.toml
crates/libs/lib-storage/src/: config.rs  lib.rs
crates/libs/lib-storage/src/media/: mod.rs
crates/libs/lib-storage/src/oss/: error.rs  mod.rs
crates/libs/lib-tmail/: Cargo.toml
crates/libs/lib-tmail/src/: config.rs  lib.rs
crates/libs/lib-tmail/src/email/: emails.rs  emails_sender.rs  error.rs  mod.rs  send_email.rs  templates_sender.rs
crates/libs/lib-tmail/src/email/templates/: reset-pwd-email.html  verification-email.html  welcome-email.html
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: b64.rs  envs.rs  lib.rs  mime.rs  time.rs
crates/libs/lib-web/: Cargo.toml
crates/libs/lib-web/src/: error.rs  lib.rs
crates/libs/lib-web/src/handlers/: handlers_email.rs  handlers_login.rs  handlers_register.rs  handlers_tokens.rs  mod.rs
crates/libs/lib-web/src/log/: mod.rs
crates/libs/lib-web/src/middleware/: mod.rs  mw_auth.rs  mw_req_stamp.rs  mw_res_map.rs
crates/libs/lib-web/src/routes/: routes_static.rs
crates/libs/lib-web/src/utils/: token.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/examples/: auth.rs  email.rs  oss_client.rs  quick_dev.rs
crates/services/web-server/src/: config.rs  error.rs  main.rs
crates/services/web-server/src/web/: mod.rs  routes_email.rs  routes_login.rs  routes_register.rs  routes_token.rs
crates/tools/gen-key/: Cargo.toml
crates/tools/gen-key/src/: main.rs
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
web-folder/: index.html
