[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow" # For experimental dev

[workspace]
resolver = "2"
members = [
    # -- App Libraries
    "crates/libs/lib-utils", # e.g., base64, time
    "crates/libs/lib-auth", # e.g., pwd, token
    "crates/libs/lib-core", # e.g., model, ctx, config
    "crates/libs/lib-tmail", # e.g., email verification, etc..
    "crates/libs/lib-storage", # e.g.,cloud media

    # -- App Services
    "crates/services/web-server",

    # -- Tools
    "crates/tools/gen-key",
]

[workspace.dependencies]
tokio = { version = "^1.47", features = ["full"] }
# -- Json
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
serde_with = "3.14.1"
serde_valid = "1.0"
# -- Axum
axum = "0.8.6"
tower-http = { version = "^0.6", features = ["fs"] }
tower-cookies = "^0.11"
# -- Data
sqlx = { version = "^0.8", default-features = false, features = [
  "runtime-tokio-rustls", "postgres", "uuid", "time", "macros"
] }
sea-query = { version = "0.32.7" , features = ["with-chrono"]}
sea-query-binder = { version = "0.7.0", features = ["sqlx-postgres", "with-uuid", "with-chrono"] }
modql = {version = "0.4.1", features = ["with-sea-query"]}
# -- Tracing
tracing = "0.1.41"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
# -- Crypt & Encode
rand = "^0.9"
hmac = "^0.12"
sha2 = "^0.10"
base64-url = "^3"
# -- Others
lazy-regex = "^3.4"
strum_macros = "^0.27"
uuid = { version = "^1", features = ["v4", "fast-rng"] }
time = { version = "0.3.44", features = ["formatting", "parsing", "serde"]}
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json", 
    "rustls-tls",         
] }
derive_more = {version = "2.0.1", features = ["from", "display"] }
