[package]
name = "lib-core"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils"}
lib-auth = { path = "../../libs/lib-auth"}
lib-tmail = { path = "../../libs/lib-tmail"}
# -- Async
tokio = { version = "1", features = ["full"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { workspace = true }
# -- Data
sqlx = { workspace = true }
sea-query = { workspace = true }
sea-query-binder = { workspace = true }
modql = { workspace = true }
# -- Tracing
tracing = "0.1"
# -- Others
uuid = {version = "1", features = ["v4","fast-rng",]}
time = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
derive_more = { workspace = true }
reqwest = "^0.12"
base64-url = "3.0.0"
strum_macros = "0.27.2"

[dev-dependencies]
anyhow = "1"
serial_test = "3.2.0"