[package]
name = "lib-storage"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils"}
# -- Async
tokio = { workspace = true }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# -- Tracing
tracing = { workspace = true }
# --  OSS
ali-oss-rs = "0.2.3"
# -- Others
uuid = {version = "1", features = ["v4","fast-rng",]}
time = { workspace = true }
chrono = { workspace = true}
futures = "0.3"

[dev-dependencies]
anyhow = "1"