[package]
name = "lib-web"
version = "0.1.0"
edition = "2024"

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils"}
lib-auth = { path = "../../libs/lib-auth"}
lib-core = { path = "../../libs/lib-core"}

# -- Async
tokio = { version = "1", features = ["full"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { workspace = true }
serde_valid = { workspace = true }
# -- Web
axum = { workspace = true }
tower-http = { workspace = true }
tower-cookies = { workspace = true }
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Others
time = { workspace = true }
uuid = {version = "1", features = ["v4","fast-rng",]}
derive_more = { workspace = true }
strum_macros = "0.27.2"
